Dados de experiências

--- a/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                 </div>
-            </div><!--Formação3-->
+            </div> <!--Formação3-->
             <div id="Formacao4">
                 <div>
                     <label>Curso</label>
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                 </div>
-            </div><!--Formação4-->
+            </div> <!--Formação4-->
             <div id="Formacao5">
                 <div>
                     <label>Curso</label>
@@ -342,45 +342,124 @@
                         </div>
                     </div>
                 </div>
-            </div><!--Formação5-->
+            </div> <!--Formação5-->
 
             <!--Dados de experiências profissionais anteriores-->
             <div>
                 <h2>Dados de experiências profissionais anteriores:</h2>
-                <label>Empresa</label>
-                <input type="text" Name="" value="" required />
-                <br>
-                <label>Início</label>
-                <input type="month" name="" value="" required />
-                <br>
-                <label>Término</label>
-                <input type="month" name="" value="" required />
-                <br>
-                <div>
-                    <label>Ocupaçoes na Empresa</label>
+                <div id="Experiencias1">
                     <div>
-                        <select name="" id="" required>
-                            <option value=""></option>
-                            <option value="1">Auxiliar/Operacional</option>
-                            <option value="2">Técnico</option>
-                            <option value="3">Estágio</option>
-                            <option value="4">Júnior/Trainee</option>
-                            <option value="5">Pleno</option>
-                            <option value="6">Sênior</option>
-                            <option value="7">Supervisão/Coordenação</option>
-                            <option value="8">Gerência</option>
-                            <option value="9">Diretoria</option>
-                        </select>
-                    </div>
-                </div>
+                        <label>Empresa</label>
+                        <input type="text" id="empresa1" Name="" value="" required />
+                        <br>
+                        <label>Início</label>
+                        <input type="month" id="inicio1" name="" value="" required />
+                        <br>
+                        <label>Término</label>
+                        <input type="month" id="termino1" name="" value="" required />
+                        <br>
+                        <div>
+                            <label>Ocupaçoes na Empresa</label>
+                            <div>
+                                <select name="" id="ocupacao1" required>
+                                    <option value=""></option>
+                                    <option value="1">Auxiliar/Operacional</option>
+                                    <option value="2">Técnico</option>
+                                    <option value="3">Estágio</option>
+                                    <option value="4">Júnior/Trainee</option>
+                                    <option value="5">Pleno</option>
+                                    <option value="6">Sênior</option>
+                                    <option value="7">Supervisão/Coordenação</option>
+                                    <option value="8">Gerência</option>
+                                    <option value="9">Diretoria</option>
+                                </select>
+                            </div>
+                        </div>
 
-                <div>
-                    <label>Atividades</label>
-                    <div>
-                        <textarea placeholder="Descreva suas atividades" required></textarea>
+                        <div>
+                            <label>Atividades</label>
+                            <div>
+                                <textarea id="atividades1" placeholder="Descreva suas atividades" required></textarea>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </div> <!--Experiências1-->
+                <div id="Experiencias2" style="display: none">
+                    <div>
+                        <label>Empresa</label>
+                        <input type="text" id="empresa2" Name="" value="" required />
+                        <br>
+                        <label>Início</label>
+                        <input type="month" id="inicio2" name="" value="" required />
+                        <br>
+                        <label>Término</label>
+                        <input type="month" id="termino2" name="" value="" required />
+                        <br>
+                        <div>
+                            <label>Ocupaçoes na Empresa</label>
+                            <div>
+                                <select name="" id="ocupacao2" required>
+                                    <option value=""></option>
+                                    <option value="1">Auxiliar/Operacional</option>
+                                    <option value="2">Técnico</option>
+                                    <option value="3">Estágio</option>
+                                    <option value="4">Júnior/Trainee</option>
+                                    <option value="5">Pleno</option>
+                                    <option value="6">Sênior</option>
+                                    <option value="7">Supervisão/Coordenação</option>
+                                    <option value="8">Gerência</option>
+                                    <option value="9">Diretoria</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div>
+                            <label>Atividades</label>
+                            <div>
+                                <textarea id="atividades2" placeholder="Descreva suas atividades" required></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!--Experiências2-->
+                <div id="Experiencias3" style="display: none">
+                    <div>
+                        <label>Empresa</label>
+                        <input type="text" id="empresa3" Name="" value="" required />
+                        <br>
+                        <label>Início</label>
+                        <input type="month" id="inicio3" name="" value="" required />
+                        <br>
+                        <label>Término</label>
+                        <input type="month" id="termino3" name="" value="" required />
+                        <br>
+                        <div>
+                            <label>Ocupaçoes na Empresa</label>
+                            <div>
+                                <select name="" id="ocupacao3" required>
+                                    <option value=""></option>
+                                    <option value="1">Auxiliar/Operacional</option>
+                                    <option value="2">Técnico</option>
+                                    <option value="3">Estágio</option>
+                                    <option value="4">Júnior/Trainee</option>
+                                    <option value="5">Pleno</option>
+                                    <option value="6">Sênior</option>
+                                    <option value="7">Supervisão/Coordenação</option>
+                                    <option value="8">Gerência</option>
+                                    <option value="9">Diretoria</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div>
+                            <label>Atividades</label>
+                            <div>
+                                <textarea id="atividades3" placeholder="Descreva suas atividades" required></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!--Experiências3-->
             </div>
+
 
             <!--Dados de idiomas-->
             <div>
