Melhorias na pagina de cadastro

--- a/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
@@ -24,7 +24,7 @@
                 <h2>Dados pessoais:</h2>
                 <div>
                     <label>Nome</label>
-                    <input type="text" Name="nome" value="" placeholder="Seu nome aqui" required />
+                    <input type="text" id="nome" Name="nome" value="" placeholder="Seu nome aqui" required />
                     <br>
                     <label>CPF</label>
                     <input type="text" Name="cpf" id="cpf" value="" onkeydown="mask.init(this, mask.cpf)" placeholder="000.000.000-00" required />
@@ -33,7 +33,7 @@
                     <input type="tel" Name="telefone" value="" id="tel" onkeydown="mask.init(this, mask.tel)" placeholder="(00) 0000-0000" required />
                     <br>
                     <label>E-mail</label>
-                    <input type="email" Name="email" value="" placeholder="nome@dominio.com" required />
+                    <input type="email" Name="email" value="" placeholder="exemplo@dominio.com" required />
                     <br>
                     <label>Cargo</label>
                     <input type="text" Name="cargo" value="" />
