--- a/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-        <form>
+        <form asp-action="Salvar" method="post">
             <!--Dados Pessoais-->
             <div>
                 <h2>Dados pessoais:</h2>
