--- a/N2B1_CadCurriculos/wwwroot/css/Cadastro.css
+++ b/N2B1_CadCurriculos/wwwroot/css/Cadastro.css
@@ -87,7 +87,41 @@ label{
     font-size:15px;
     font-family:Verdana, Geneva, Tahoma, sans-serif
 }
-.btnAdicionaRemove{
+
+.btnAdicionaRemove {
     display: inline-block;
     padding-right: 4px;
+    width: 55;
+    
+}
+
+#btnRemoveCurso {
+    margin-right: 0px;
+    margin-left: 0px;
+    width: 50px;
+}
+
+#btnAdicionaCurso {
+    margin-right: 0px;
+    width: 50px;
+}
+#btnRemoveIdioma {
+    margin-right: 0px;
+    margin-left: 0px;
+    width: 50px;
+}
+
+#btnAdicionaidioma {
+    margin-right: 0px;
+    width: 50px;
+}
+#btnRemoveExperiencias {
+    margin-right: 0px;
+    margin-left: 0px;
+    width: 50px;
+}
+
+#btnAdicionaExperiencia {
+    margin-right: 0px;
+    width: 50px;
 }
